--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main">
+		<span id="green" class="color"></span>
+		<span id="yellow" class="color"></span>
+		<span id="red" class="color"></span>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
