--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="main">
+	<div class="container">
 		<div id="green" class="color"></div>
 		<div id="yellow" class="color"></div>
 		<div id="red" class="color"></div>
