--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<div id="green" class="color"></div>
-		<div id="yellow" class="color"></div>
-		<div id="red" class="color"></div>
+		<div class="green" class="color"></div>
+		<div class="yellow" class="color"></div>
+		<div class="red" class="color"></div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
